@@ -1,3 +1,7 @@
+2016-03-02  Thorsten Kukuk  <kukuk@thkukuk.de>
+
+	* src/yppasswd.c (getnismaster): Replace getrpcport with rpcb_getaddr.
+
 2016-02-26  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* src/yppoll.c (main): Check if the domain was bound.
